Update android-gradle-plugin to v8